codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__mcp_tools_output_lists_tools_for_hyphenated_server_names.snap
---
source: tui_app_server/src/history_cell.rs
assertion_line: 3310
expression: rendered
---
/mcp

🔌  MCP Tools

  • some-server
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: (none)
    • Resource templates: (none)
