codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• Ran echo one
  │ echo two
  └ (no output)
