codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__plan_update_without_note_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
• Updated Plan
  └ □ Define error taxonomy
    □ Implement mapping to user messages
