codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__history_cell__tests__ps_output_chunk_leading_whitespace_snapshot.snap
---
source: tui_app_server/src/history_cell.rs
expression: rendered
---
/ps

Background terminals

  • just fix
    ↳   indented first
          more indented
